--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shaw Talebi
+title: Vishal Dnyaneshwar Wavhale
 logo: /assets/img/headshot_circle.png
-#description: text below image
+description: Software Developer
 show_downloads: true
 theme: jekyll-theme-minimal
