--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vishal Dnyaneshwar Wavhale
 logo: /assets/img/headshot_circle.png
-description: Software Developer
+description: Email - vdwavhal@syr.edu
 show_downloads: true
 theme: jekyll-theme-minimal
